fix scroll button visibility

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 
 .card-img-top {
   width: 100%;
-  height: 40vh;
+  max-height: 40vh;
   object-fit: cover;
 }
 .homeImg {
@@ -220,8 +220,8 @@ h3 {
   cursor: pointer;
   background-image: url(./assets/img/up-arrow.png);
   animation: fadeIn 0.3s;
-  transition: 5s;
-  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0.7;
   box-shadow: 0 5px 10px rgb(44, 79, 51);
 }
 
